# create-crap-app

./: Cargo.toml  README.md
src/: create_files.rs  main.rs
templates/react+typescript/backend/: Cargo.toml
templates/react+typescript/backend/src/: main.rs
templates/react+typescript/backend/src/controllers/: mod.rs  webhooks.rs
templates/react+typescript/backend/src/schemas/: clerk_webhook_schema.rs  mod.rs
templates/react+typescript/frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
templates/react+typescript/frontend/src/: main.tsx
templates/react+typescript/frontend/src/lib/: router.tsx
templates/react+typescript/frontend/src/pages/: HomePage.tsx
